--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ html {
   
   #splash {
     min-height: 700px;
-    background: url("/images/bk_stroke.png");
+    background: url("/images/background_MACT.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
