--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,26 @@ html {
   /*div {
     border: 1px solid black;
   } */
-
+  
+  @keyframes fadeInAnimation {
+    /*for div fade-in */
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  card {
+    min-height: 400px;
+  }
+  
+  .fadein {
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
   .area {
     min-height: 450px;
   }
