--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -17,21 +17,32 @@
     </head>
 
     <body>
-        <%- include('header'); %>
-        <div class="container">
-          <div class="spacer"></div>
-          <div>Projects</div>
-          <% projectArray.forEach((item, index) => { %>
-          <div>
-            <a href='/project/<%= index + 1 %>'><%= item %></a>
+      <%- include('header'); %>
+      <main>
+        <div class="spacer"></div>
+        <div class="display-5 justify-content-center text-center">Projects</div>
+    
+        <div class="mb-5">
+          <div class="row">
+            <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4 g-3 text-center justify-content-center">
+    
+    
+              <% projectArray.forEach((item, index) => {%>
+              <div class="col-10">
+                <%- include('projectCard', {image: item.img_url, name: item.project_name, ident: item.id}); %>
+              </div>
+              <% }); %>
+    
+            </div>
           </div>
-          <% }); %>
         </div>
-        <div class="container-fluid">
-          <%- include('footer'); %>
-        </div>
-
-        <script type="module" src="./js/index.js"></script>
+    
+      </main>
+      <%- include('footer'); %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+      <script type="module" src="./js/index.js"></script>
       </body>
       
       </html>
