removed newProjects page

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <header>
   <nav id="top-nav" class="navbar navbar-expand navbar-light fixed-top bg-light" aria-label="Navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/#splash">
+      <a class="navbar-brand" href="/#splash" aria-label="Back to top of home page" role="link">
         <img class="me-auto" src="./images/background_MACT.jpg" height="45" role="img" alt="">
       </a>
       <div class="collapse navbar-collapse">
