--- a/views/project.ejs
+++ b/views/project.ejs
@@ -24,10 +24,10 @@
               <div class="row justify-content-center">
                 <div class="col-12 col-md-4 mt-4">
                   <div class="card m-2">
-                    <img src=<%=`.${project.img_url}`  %> class="card-img-top" alt="..." />
+                    <img src=<%=project.img_url  %> class="card-img-top" alt="..." />
                     <div>
                       <div class="card-title">
-                        <h2><%=project.project_name  %></h2>
+                        <h1><%=project.project_name  %></h1>
                       </div>
                     </div>
                     <div class="card-footer">
