--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,8 @@
             <div class="row">
               <div class="col-5">
                 <%- include('projectCard', {image: featuredProject.img_url, name: featuredProject.project_name, ident: featuredProject.id}); %>
-              </div>
+                <% let img = featuredProject.img_url %>
+                <% include('projectCard', {image: img, name: featuredProject.project_name, ident: featuredProject.id}); %>
               <div class="col-5">
                 <div class="m-5">
                   <a href="/projects"><button id="allProjectsButton" type="button"
