--- a/views/project.ejs
+++ b/views/project.ejs
@@ -8,6 +8,8 @@
         <title>Project</title>
         <meta name="author" content="Dionna Womack">
         <meta name="description" content="A page for one project.">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
     </head>
 
