--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body>
@@ -102,5 +102,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"            
           integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>  
         <script type="module" src="./js/contact.js"></script>
+        <script type="module" src="./js/index.js"></script>
   </body>
 </html>
