--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&family=Poiret+One&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
 
     <body>
